--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://sreeramis8888:vDsUN9y8ZTLWNjHo@community.hpgd6la.mongodb.net/hef
+MONGODB_URI=mongodb+srv://sreeramis8888:vDsUN9y8ZTLWNjHo@community.hpgd6la.mongodb.net/
